--- a/package.json
+++ b/package.json
@@ -2,10 +2,23 @@
   "name": "redis_project",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch --env-file .env index.ts",
+    "build": "tsc",
+    "start": "node --env-file .env dist/index.js"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.2.0",
+    "express": "^5.1.0",
+    "nanoid": "^5.1.5",
+    "redis": "^5.7.0",
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2",
+    "zod": "^4.0.14"
+  }
 }
